# near-kit-rs

./: .gitignore  AGENTS.md  Cargo.toml  MISSING_FEATURES.md  README.md  REFERENCE.md  SPEC.md  lefthook.yml  notes.md  release-plz.toml
.config/: nextest.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release-plz.yml
crates/near-kit/: CHANGELOG.md  Cargo.toml
crates/near-kit-macros/: CHANGELOG.md  Cargo.toml
crates/near-kit-macros/src/: lib.rs
crates/near-kit-macros/tests/: trybuild.rs
crates/near-kit-macros/tests/compile-fail/: missing_receiver.rs  missing_receiver.stderr  multiple_arguments.rs  multiple_arguments.stderr  mut_without_call_attr.rs  mut_without_call_attr.stderr  non_reference_receiver.rs  non_reference_receiver.stderr  unknown_call_option.rs  unknown_call_option.stderr  unknown_format.rs  unknown_format.stderr  view_with_call_attr.rs  view_with_call_attr.stderr
crates/near-kit-macros/tests/compile-pass/: borsh_contract.rs  contract_composition.rs  json_contract.rs  mixed_format_contract.rs
crates/near-kit/examples/: README.md  global_contracts.rs  meta_transactions.rs  quickstart.rs  rotating_signer.rs  sequential_sends.rs  typed_contracts.rs
crates/near-kit/src/: contract.rs  error.rs  lib.rs  platform.rs  sandbox.rs
crates/near-kit/src/client/: keyring_signer.rs  mod.rs  near.rs  nonce_manager.rs  query.rs  rpc.rs  signer.rs  transaction.rs  tx.rs
crates/near-kit/src/tokens/: ft.rs  known.rs  mod.rs  mt.rs  nft.rs  types.rs
crates/near-kit/src/types/: account.rs  action.rs  block_reference.rs  error.rs  hash.rs  hd.rs  key.rs  mod.rs  nep413.rs  network.rs  rpc.rs  rpc_extra.rs  transaction.rs  units.rs  wait_level.rs
crates/near-kit/tests/: debug_rpc_responses.rs  delegate_action_integration.rs  global_contracts_integration.rs  macro_derives.rs  sandbox_integration.rs  wasm.rs
crates/near-kit/tests/integration/: basic_integration.rs  debug_rpc_responses.rs  delegate_action_integration.rs  delegate_v2_integration.rs  error_consolidation_integration.rs  error_handling_integration.rs  exec_metadata_integration.rs  gas_key_transaction_integration.rs  global_contracts_integration.rs  main.rs  ml_dsa_integration.rs  offline_signing_integration.rs  rpc_types_integration.rs  sandbox_integration.rs  signer_edge_cases_integration.rs  stabilized_rpc_integration.rs  token_error_integration.rs  token_integration.rs  tracing_integration.rs  transaction_failure_integration.rs  transaction_outcome_integration.rs  typed_contract_error_integration.rs  typed_contract_integration.rs  typed_error_integration.rs  view_state_integration.rs
near-kit-macros/: Cargo.toml
near-kit-macros/src/: lib.rs
src/: contract.rs  error.rs  lib.rs  sandbox.rs
src/client/: keystore.rs  mod.rs  near.rs  query.rs  rpc.rs  signer.rs  transaction.rs  tx.rs
src/types/: account.rs  action.rs  block_reference.rs  key.rs  mod.rs  nep413.rs  rpc.rs  units.rs
tests/: basic_integration.rs  debug_rpc_responses.rs  delegate_action_integration.rs  global_contracts_integration.rs  rpc_types_integration.rs  sandbox_integration.rs  testnet_integration.rs  typed_contract_integration.rs
