[package]
name = "near-kit"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/r-near/near-kit-rs"
rust-version = "1.86"
description = "A clean, ergonomic Rust client for NEAR Protocol"
keywords = ["near", "blockchain", "crypto", "web3"]
categories = ["api-bindings", "cryptography::cryptocurrencies"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }

# HTTP client
reqwest = { version = "0.13", features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
borsh = { version = "1", features = ["derive"] }
base64 = "0.22"

# Cryptography
ed25519-dalek = { version = "2", features = ["rand_core"] }
sha2 = "0.10"
rand = "0.8"

# Encoding
bs58 = "0.5"
hex = "0.4"

# Filesystem
dirs = "6"

# Error handling
thiserror = "2"

# Logging
tracing = "0.1"

# Optional: Sandbox integration
near-sandbox = { path = "/home/ricky/near-sandbox-rs", features = ["global_install"], optional = true }

[features]
default = []
sandbox = ["near-sandbox"]

[dev-dependencies]
tokio-test = "0.4"
near-sandbox = { path = "/home/ricky/near-sandbox-rs", features = ["global_install"] }
tempfile = "3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
lto = true
codegen-units = 1
