[package]
name = "near-kit-macros"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/r-near/near-kit-rs"
description = "Proc macros for near-kit typed contract interfaces"
keywords = ["near", "blockchain", "macro", "proc-macro"]
categories = ["development-tools::procedural-macro-helpers"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "parsing", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
