[package]
name = "near-kit-macros"
description = "Proc macros for near-kit typed contract interfaces"
keywords = ["near", "blockchain", "macro", "proc-macro"]
categories = ["development-tools::procedural-macro-helpers"]

# Inherit from workspace
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true

[dev-dependencies]
trybuild = "1.0"
near-kit = { path = "../near-kit" }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
