[package]
name = "near-kit"
description = "A clean, ergonomic Rust client for NEAR Protocol"
keywords = ["near", "blockchain", "crypto", "web3"]
categories = ["api-bindings", "cryptography::cryptocurrencies"]
readme = "../../README.md"

# Inherit from workspace
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
# NEAR ecosystem types
near-account-id.workspace = true
near-token.workspace = true
near-gas.workspace = true

# Async runtime — only pull in `sync`; `time` is added for non-wasm below
tokio = { version = "1", features = ["sync"] }
futures.workspace = true

# HTTP client
reqwest.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
borsh.workspace = true
base64.workspace = true

# Cryptography
ed25519-dalek.workspace = true
sha2.workspace = true
sha3.workspace = true
rand.workspace = true
bip39.workspace = true
slipped10.workspace = true
k256.workspace = true

# Encoding
bs58.workspace = true
hex.workspace = true

# Filesystem (optional, not available on wasm)
dirs = { workspace = true, optional = true }

# System keyring (optional)
keyring = { workspace = true, optional = true }

# Error handling
thiserror.workspace = true

# Logging
tracing.workspace = true

# Proc macros for typed contracts
near-kit-macros.workspace = true

# Optional: Sandbox integration (via Docker/testcontainers)
testcontainers = { workspace = true, optional = true, features = ["watchdog"] }
libc = { version = "0.2", optional = true }
serde_with = { version = "3.17.0", features = ["hex", "base64"] }

# Native-only: tokio timer support for retry backoff
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["sync", "time"] }

# WASM-only: browser-compatible timer, entropy, and time APIs
[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-timers = { version = "0.3", features = ["futures"] }
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3"

[features]
default = ["keyring", "file-signer"]
sandbox = ["dep:testcontainers", "dep:libc"]
keyring = ["dep:keyring"]
file-signer = ["dep:dirs"]

[dev-dependencies]
tokio-test.workspace = true
tempfile.workspace = true
tracing-subscriber.workspace = true
wasm-bindgen-test = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
