[package]
name = "near-kit"
description = "A clean, ergonomic Rust client for NEAR Protocol"
keywords = ["near", "blockchain", "crypto", "web3"]
categories = ["api-bindings", "cryptography::cryptocurrencies"]
readme = "../../README.md"

# Inherit from workspace
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
# NEAR ecosystem types
near-account-id.workspace = true
near-token.workspace = true
near-gas.workspace = true

# Async runtime
tokio.workspace = true
futures.workspace = true

# HTTP client
reqwest.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
borsh.workspace = true
base64.workspace = true

# Cryptography
ed25519-dalek.workspace = true
sha2.workspace = true
sha3.workspace = true
rand.workspace = true
bip39.workspace = true
hmac.workspace = true
k256.workspace = true

# Encoding
bs58.workspace = true
hex.workspace = true

# Filesystem
dirs.workspace = true

# System keyring (optional)
keyring = { workspace = true, optional = true }

# Error handling
thiserror.workspace = true

# Logging
tracing.workspace = true

# Proc macros for typed contracts
near-kit-macros.workspace = true

# Optional: Sandbox integration (via Docker/testcontainers)
testcontainers = { workspace = true, optional = true, features = ["watchdog"] }
libc = { version = "0.2", optional = true }
serde_with = { version = "3.17.0", features = ["hex", "base64"] }

[features]
default = ["keyring"]
sandbox = ["dep:testcontainers", "dep:libc"]
keyring = ["dep:keyring"]
# Enables `interactive-clap` derives on re-exported `NearToken` and `Gas` types.
# Useful for CLI tools using `interactive-clap` for argument parsing.
interactive-clap = ["near-token/interactive-clap", "near-gas/interactive-clap"]

[dev-dependencies]
tokio-test.workspace = true
tempfile.workspace = true
tracing-subscriber.workspace = true
